@@ -1,13 +1,12 @@
 package domain;
 
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
 
-public class Cards implements Iterable<Card> {
+public class Cards {
     private static final int BUST_CRITERIA = 21;
     private static final int ACE_EXTRA_SCORE = 10;
+    private static final int BLACKJACK_CARD_SIZE = 2;
 
     private final List<Card> cards;
 
@@ -16,9 +15,15 @@ public class Cards implements Iterable<Card> {
     }
 
     public void addCard(Card card) {
+        validateAddable(card);
         cards.add(card);
     }
 
+    private void validateAddable(Card card) {
+        if (cards.contains(card)) {
+            throw new IllegalArgumentException("이미 보유하고 있는 카드입니다. 중복 추가할 수 없습니다.");
+        }
+    }
 
     public int calculateCardScoreSum() {
         int scoreSum = getScoreSumWithBasicAceScore();
@@ -48,12 +53,11 @@ public class Cards implements Iterable<Card> {
         return calculateCardScoreSum() > BUST_CRITERIA;
     }
 
-    @Override
-    public Iterator<Card> iterator() {
-        return Collections.unmodifiableList(cards).iterator();
+    public boolean isBlackJack() {
+        return cards.size() == BLACKJACK_CARD_SIZE && calculateCardScoreSum() == BUST_CRITERIA;
     }
 
     public List<Card> getCards() {
-        return Collections.unmodifiableList(cards);
+        return List.copyOf(cards);
     }
 }
